--- a/css/mobile.css
+++ b/css/mobile.css
@@ -286,7 +286,7 @@
 		width: auto;
 	}
 	#header div .mobile-submenu {
-		background: rgba(98, 0, 49, 0.91) url(../images/mobile/mobile-expand.png) no-repeat center;
+		background: #d51111 url(../images/mobile/mobile-expand.png) no-repeat center;
 		border-left: 1px solid #f1f2f2;
 		display: inline-block;
 		height: 3.4em;
@@ -315,7 +315,7 @@
 		z-index: 40;
 	}
 	#header div ul#navigation li ul li {
-		background: rgba(98, 0, 49, 0.91);
+		background: #d51111;
 		border-top: 1px solid #f1f2f2;
 		display: block;
 		height: auto;
