--- a/css/style.css
+++ b/css/style.css
@@ -87,7 +87,7 @@ img {
 	width: auto;
 }
 #header div ul li a:hover {
-	background-color: #620031;
+	background-color: #d51111;
 	color: #ffffff;
 }
 #header div ul li.selected a {
@@ -296,7 +296,7 @@ img {
 	opacity: 0.7;
 }
 #body.home .body {
-	background-color: #630031;
+	background-color: #d51111;
 	margin: 0;
 	min-height: 168px;
 	overflow: hidden;
@@ -348,7 +348,7 @@ img {
 	color: #a3a3a3;
 }
 #body.home .footer {
-	background: url('../images/thor.jpg') no-repeat center center fixed; 
+	background: url('../images/thor.jpg') no-repeat center; 
 	  -webkit-background-size: cover;
 	  -moz-background-size: cover;
 	  -o-background-size: cover;
@@ -1306,7 +1306,7 @@ img {
 	width: auto;
 }
 #footer .connect {
-	background-color: #a3a3a3;
+	background-color: #d51111;
 	margin: 0;
 	min-height: 84px;
 	overflow: hidden;
